<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_generate"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="@string/nav_generate" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_history" />

    <item
        android:id="@+id/navigation_downloads"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/nav_downloads" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
