<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.asifqureshi.aivoicestudio.ui.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_generate"
        android:name="com.asifqureshi.aivoicestudio.ui.VoiceGeneratorFragment"
        android:label="@string/nav_generate"
        tools:layout="@layout/fragment_voice_generator" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.asifqureshi.aivoicestudio.ui.HistoryFragment"
        android:label="@string/nav_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_downloads"
        android:name="com.asifqureshi.aivoicestudio.ui.DownloadsFragment"
        android:label="@string/nav_downloads"
        tools:layout="@layout/fragment_downloads" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.asifqureshi.aivoicestudio.ui.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
